--- a/rootfs/etc/uwsgi/uwsgi.ini
+++ b/rootfs/etc/uwsgi/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 wsgi-file=/opt/privacyidea/etc/privacyidea/privacyideaapp.wsgi
 buffer-size=8192
-socket = 127.0.0.1:8080
+http-socket = 0.0.0.0:8080
 # Graceful shutdown on SIGTERM, see https://github.com/unbit/uwsgi/issues/849#issuecomment-118869386
 hook-master-start = unix_signal:15 gracefully_kill_them_all
 need-app = true
